--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "date-fns": "^1.27.2",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.11.1",
-    "exports-loader": "^0.6.3",
+    "exports-loader": "^0.6.4",
     "file-loader": "^0.9.0",
     "gotrue-js": "^0.9.1",
     "gulp": "^3.9.1",
@@ -37,13 +37,14 @@
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
     "imports-loader": "^0.6.5",
-    "netlify-cms": "^1.0.2",
+    "netlify-cms": "^1.7.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^0.9.1",
     "postcss-uncss": "^0.14.0",
     "react": "15.6.1",
     "uncss": "^0.14.1",
+    "uploadcare-netlifycms": "git+ssh://git@github.com:uploadcare/uploadcare-netlifycms.git",
     "url-loader": "^0.5.7",
     "webpack": "^3.0.0",
     "whatwg-fetch": "^1.0.0"
